fixed link spacing

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -70,4 +70,8 @@ h1 {
 
 }
 
+#footer-link {
+    margin: 10px;
+}
+
 
